<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="horizontal">        <RelativeLayout            android:layout_width="wrap_content"            android:layout_height="match_parent"            android:paddingRight="@dimen/activity_vertical_margin">            <TextView                android:id="@+id/patient_name_label"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginTop="15dp"                android:text="@string/patient_name_hint"                android:textSize="15dp"                android:textColor="@color/black"/>            <TextView                android:id="@+id/blood_type_label"                android:layout_gravity="center"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/patient_name_label"                android:layout_marginTop="15dp"                android:text="@string/patient_blood_type_word"                android:textColor="@color/black"/>            <TextView                android:id="@+id/city_label"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/blood_type_label"                android:layout_marginTop="15dp"                android:text="@string/city_hint"                android:textSize="15dp"                android:textColor="@color/black"/>            <TextView                android:id="@+id/hospital_label"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/city_label"                android:layout_marginTop="15dp"                android:text="@string/hospital_hint"                android:textSize="15dp"                android:textColor="@color/black"/>            <TextView                android:id="@+id/phone_to_connect_label"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/hospital_label"                android:layout_marginTop="15dp"                android:text="@string/phone_to_connect_hint"                android:textSize="15dp"                android:textColor="@color/black"/>        </RelativeLayout>        <RelativeLayout            android:layout_width="match_parent"            android:layout_height="match_parent">            <TextView                android:id="@+id/patient_name"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginTop="15dp"                android:layout_marginLeft="20dp"                android:textSize="15dp"                android:textColor="@color/red"/>            <TextView                android:id="@+id/blood_type"                android:layout_gravity="center"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/patient_name"                android:layout_marginTop="15dp"                android:layout_marginLeft="20dp"                android:textColor="@color/red"/>            <TextView                android:id="@+id/city"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/blood_type"                android:layout_marginTop="15dp"                android:layout_marginLeft="20dp"                android:textSize="15dp"                android:textColor="@color/red"/>            <TextView                android:id="@+id/hospital"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/city"                android:layout_marginTop="15dp"                android:layout_marginLeft="20dp"                android:textSize="15dp"                android:textColor="@color/red"/>            <TextView                android:id="@+id/phone_to_connect"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/hospital"                android:layout_marginTop="15dp"                android:layout_marginBottom="25dp"                android:layout_marginLeft="10dp"                android:textSize="15dp"                android:textColor="@color/red"/>        </RelativeLayout>    </LinearLayout>    <Button        android:id="@+id/delete"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="@drawable/button_border"        android:text="@string/delete_button"        android:textColor="@color/red"/></LinearLayout>