<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="saeed.life.Activities.NewRequestActivity">

    <ProgressBar
        android:id="@+id/new_request_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/new_request_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/patient_name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/red">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/patient_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/patient_name_hint"
                    android:textColor="@color/red"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/patient_blood_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/patient_name_wrapper"
                android:layout_marginTop="25dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_to_connect_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/patient_blood_type"
                android:textColorHint="@color/red"
                android:layout_marginTop="25dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phone_to_connect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/phone_to_connect_hint"
                    android:textColor="@color/red"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hospital_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_to_connect_wrapper"
                android:textColorHint="@color/red"
                android:layout_marginTop="25dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/hospital"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/hospital_hint"
                    android:textColor="@color/red"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/city_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hospital_wrapper"
                android:textColorHint="@color/red"
                android:layout_marginTop="25dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/city_hint"
                    android:textColor="@color/red"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/request"
                android:background="@drawable/button_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/city_wrapper"
                android:layout_marginTop="30dp"
                android:text="@string/request_button"
                android:textColor="@color/red"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
